<resources>


    <string name="app_name">钱儿频道</string>

    <string name="press_to_exit">再次点击退出</string>
    <string name="press_to_exit_home">再次点击返回桌面</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="Login">登录</string>
    <string name="please_login">请请登录!</string>

    <string name="phone_number">请输入手机号</string>
    <string name="password">密码</string>
    <string name="code">验证码</string>
    <string name="find_password">找回密码</string>
    <string name="reset_password">重置密码</string>
    <string name="send_cord">发送验证码</string>
    <string name="refer_log">提交并登录</string>
    <string name="input_new_pass">请输入新密码</string>
    <string name="input_affirm_pass">请再次输入密码</string>
    <string name="safety_current_politics">安全时政</string>
    <string name="safety_knowledge">安全知识</string>
    <string name="safety_enterprise">安全企业</string>
    <string name="error_net">网络竟然崩溃了</string>
    <string name="notice_hurdle">公告栏</string>
    <string name="case_analysis">案例分析</string>
    <string name="one_day_one_question">一日一题</string>
    <string name="answer_statistics">答题统计</string>
    <string name="post_instructions">岗位须知</string>
    <string name="my_favorite">我的收藏</string>
    <string name="reload_question">重新答题</string>
    <string name="Submit_the_answer">提交答案</string>
    <string name="Todays_question">今日问答</string>
    <string name="answer_to_interpret">答案解读</string>
    <string name="integral_help">一次回答正确+5分，二次回答正确+3分，三次回答正确+1分，每天最多三次答题机会，三次回答不正确当日一日一题积分为0。</string>
    
    <string name="Today_has_been_a">今日已答</string>
    <string name="Today_has_been_z">暂无题目</string>
    <string name="Today_question">今日问答</string>
    <string name="you_Today_question">您今日已答过题!</string>
    <string name="you_Today_question_three">您今日已答题超过三次，不能答题!</string>
    <string name="you_Today_question_zan">不在答题时间段内，无法答题!</string>

    <!--钱儿-->
    <string name="发现">发现</string>
    <string name="分类">分类</string>
    <string name="文章">文章</string>
    <string name="我的">我的</string>
    <string name="自选">自选</string>
    <string name="钱儿频道">钱儿频道</string>
    <string name="专辑">专辑</string>
    <string name="故事">故事</string>
    <string name="视频">视频</string>
    <string name="输入关键字">输入关键字</string>
    <string name="热门搜索">热门搜索</string>
    <string name="搜索历史">搜索历史</string>
    <string name="删除">删除</string>
    <string name="清除历史">清除历史</string>
    <string name="没有找到相关内容">没有找到相关内容</string>
    <string name="加载中">加载中</string>
    <string name="点击登陆">点击登录</string>
    <string name="我的信息">我的信息</string>
    <string name="宝宝信息">宝宝信息</string>
    <string name="收藏的专辑">收藏的专辑</string>
    <string name="我的收藏">我的收藏</string>
    <string name="昵称">昵称</string>
    <string name="性别">性别</string>
    <string name="取消">取消</string>
    <string name="请输入昵称">请输入昵称</string>
    <string name="提交">提交</string>
    <string name="确认">确认</string>
    <string name="男">男</string>
    <string name="女">女</string>
    <string name="生日">生日</string>
    <string name="已购买专辑">已购买专辑</string>
    <string name="我的播单">我的播单</string>
    <string name="今日推荐">今日推荐</string>
    <string name="热门文章">热门文章</string>
    <string name="主题推荐">主题推荐</string>
    <string name="排行榜">排行榜</string>
    <string name="榜单">榜单</string>
    <string name="全部">全部</string>
    <string name="本周">本周</string>
    <string name="本月">本月</string>
    <string name="故事排行">故事排行</string>
    <string name="专辑排行">专辑排行</string>
    <string name="精彩视频">精彩视频</string>
    <string name="更多推荐">更多推荐</string>
    <string name="收藏">收藏</string>
    <string name="下载">下载</string>
    <string name="分享">分享</string>
    <string name="多选">多选</string>
    <string name="排序">排序</string>
    <string name="全选">全选</string>
    <string name="加至播单">加至播单</string>
    <string name="播放">播放</string>
    <string name="更改名称">更改名称</string>
    <string name="删除播单">删除播单</string>
    <string name="管理故事">管理故事</string>
    <string name="添加至我的播单">添加至我的播单</string>
    <string name="输入名称新建播单">输入名称新建播单</string>
    <string name="默认播单">默认播单</string>
    <string name="关闭">关闭</string>
    <string name="本周故事">本周故事</string>
    <string name="本周专辑">本周专辑</string>
    <string name="本月故事">本月故事</string>
    <string name="本月专辑">本月专辑</string>
    <string name="微信登陆">微信登录</string>
    <string name="登陆">登录</string>
    <string name="注册">注册</string>
    <string name="one">微信登录，快速同步钱儿频道收听数据</string>
    <string name="two">我已阅读并同意《钱儿频道软件服务协议》</string>
    <string name="绑定手机">绑定手机</string>
    <string name="手机号登录">手机号登录</string>
    <string name="手机号注册">手机号注册</string>
    <string name="获取验证码">获取验证码</string>
    <string name="已绑定">已绑定</string>
    <string name="未绑定">绑定后同步购买收听记录</string>
    <string name="需登陆">请登录后重试</string>
    <string name="已登录">已登录</string>
    <string name="成功添加下载任务">成功添加下载任务</string>
    <string name="请选择">请选择</string>
    <string name="已下载">已下载</string>
    <string name="下载中">下载中</string>
    <string name="WiFi">下载将消耗流量，是否继续？</string>
    <string name="付费">付费内容暂不支持</string>
    <string name="无网络">无网络连接，请连接至网络</string>
    <string name="empty"></string>
    <string name="emptyone">没找到相关内容，请换个关键词试一下</string>


    <string name="input_allow">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>


    <string name="tips_scan_code">将二维码/条形码放入框内，即可自动扫码</string>
    <string name="what">输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单输入名称新建播单</string>



</resources>
