<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <LinearLayout
        android:paddingLeft="@dimen/margin_11"
        android:paddingRight="@dimen/margin_11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/user_layout"
        android:background="@drawable/press_one"
        >
        <fm.qian.michael.widget.RoundedImage.RoundedImageView
            android:layout_marginBottom="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_width="@dimen/margin_80"
            android:layout_height="@dimen/margin_80"
            android:layout_gravity="center_vertical"
            android:id="@+id/head_portrait"
            android:background="@drawable/myicon"
            android:scaleType="fitXY"
            android:elevation="@dimen/radius"
            app:corner_radius="@dimen/margin_80"
            />
        <LinearLayout
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|left"
            >
            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/点击登陆"
                style="@style/Text0"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|right"
            >

            <ImageView style="@style/m_style_image_one" />

        </LinearLayout>

    </LinearLayout>
    <View
       style="@style/view_line_one"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_11"
        android:paddingRight="@dimen/margin_11"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/wodexinxi_layout"
            style="@style/m_style_layout_three"
            >
            <LinearLayout
                style="@style/m_style_layout_six"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/昵称"
                    style="@style/m_text_style_one"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|right"
                >
                <TextView
                    android:id="@+id/nc_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="未设置"
                    style="@style/Text10"
                    android:layout_marginRight="@dimen/item_margin_one"
                    />

                <ImageView style="@style/m_style_image_one" />


            </LinearLayout>

        </LinearLayout>
        <View
            style="@style/view_line"
            />

        <LinearLayout
            android:id="@+id/baobaoxinxi_layout"
            style="@style/m_style_layout_three"
            >
            <LinearLayout
                style="@style/m_style_layout_six"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/性别"
                    style="@style/m_text_style_one"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|right"
                >

                <TextView
                    android:id="@+id/xb_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="未设置"
                    style="@style/Text10"
                    android:layout_marginRight="@dimen/item_margin_one"
                    />

                <ImageView style="@style/m_style_image_one" />


            </LinearLayout>

        </LinearLayout>
        <View
            style="@style/view_line"
            />

        <LinearLayout
            android:id="@+id/layout_sr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/sczj_layout"
                style="@style/m_style_layout_three">
                <LinearLayout style="@style/m_style_layout_six">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/生日"
                        style="@style/m_text_style_one"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|right"
                    >

                    <TextView
                        android:id="@+id/sr_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2011-01-01"
                        style="@style/Text10"
                        android:layout_marginRight="@dimen/item_margin_one"
                        />

                    <ImageView style="@style/m_style_image_one" />


                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/view_line"
                />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>